has ln node
