# lnrpc/graphrpc/graph.swagger.json
@@ -41,6 +41,18 @@
     }
   },
   "definitions": {
+    "graphrpcHasLightningNodeResp": {
+      "type": "object",
+      "properties": {
+        "known": {
+          "type": "boolean"
+        },
+        "last_update": {
+          "type": "integer",
+          "format": "int64"
+        }
+      }
+    },
     "graphrpcStatsResp": {
       "type": "object",
       "properties": {
